删除了无用代码，并完成了学生端和老师端功能